--- a/kotak  16-50 Strangle  AlgoExecution.ipynb
+++ b/kotak  16-50 Strangle  AlgoExecution.ipynb
@@ -410,11 +410,182 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 3:00 Pm Exit "
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Continuation Exit "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "side =  input(\"CE or PE : ? \")\n",
+    "\n",
+    "exit_time = '15:00:00'\n",
+    "while True :\n",
+    "    if datetime.now().strftime(\"%H\") == exit_time[0:2] and int(datetime.now().strftime(\"%M\")) == int(exit_time[3:5]) and int(datetime.now().strftime(\"%S\")) == int(exit_time[6:8]):\n",
+    "        print(\"\"\"\n",
+    "        Strategy got exit\n",
+    "        \"\"\")\n",
+    "        break\n",
+    "\n",
+    "\n",
+    "\n",
+    "if side == 'ce' or side == 'cE' or side == 'Ce' or side == 'CE' or side == 'C' or side == 'c'  :\n",
+    "    client.place_order(order_type = order_type, instrument_token = CE_token, transaction_type = \"BUY\",\\\n",
+    "                        quantity = 25*lots, price = 0, disclosed_quantity = 0, trigger_price = 0,\\\n",
+    "                        tag = \"string\", validity = \"GFD\", variety = \"REGULAR\")\n",
+    "    time.sleep(2)\n",
+    "    client.place_order(order_type = order_type, instrument_token = CE_token_Hedge, transaction_type = \"SELL\",\\\n",
+    "                   quantity = 25*lots, price = 0, disclosed_quantity = 0, trigger_price = 0,\\\n",
+    "                   tag = \"string\", validity = \"GFD\", variety = \"REGULAR\")\n",
+    "    print(\"CE exit\")\n",
+    "\n",
+    "elif side == 'pe' or side == 'pE' or side == 'Pe' or side == 'PE' or side == 'P' or side == 'p':\n",
+    "    PE_3OTM = client.place_order(order_type = order_type, instrument_token = PE_token, transaction_type = \"BUY\",\\\n",
+    "                        quantity = 25*lots, price = 0, disclosed_quantity = 0, trigger_price = 0,\\\n",
+    "                        tag = \"string\", validity = \"GFD\", variety = \"REGULAR\")\n",
+    "    time.sleep(2)\n",
+    "    PE_3OTM = client.place_order(order_type = order_type, instrument_token = PE_token_Hedge, transaction_type = \"SELL\",\\\n",
+    "                   quantity = 25*lots, price = 0, disclosed_quantity = 0, trigger_price = 0,\\\n",
+    "                   tag = \"string\", validity = \"GFD\", variety = \"REGULAR\")\n",
+    "    print(\"PE exit\")\n",
+    "    \n",
+    "    \n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Emergency Exit "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# pip install -e \"git+https://github.com/paramatrixtech/ksapi.git#egg=ks_api_client&subdirectory=./python\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import ks_api_client\n",
+    "from ks_api_client import ks_api\n",
+    "import pandas as pd\n",
+    "from datetime import datetime, date\n",
+    "import time\n",
+    "import calendar\n",
+    "import requests\n",
+    "import pandas as pd\n",
+    "\n",
+    "userId=\"\"\n",
+    "password=\"\"\n",
+    "\n",
+    "accessToken=\"\"\n",
+    "consumerKey=\"\"\n",
+    "consumerSecret=\"\"\n",
+    "\n",
+    "accessCode=input('Access Code : ')\n",
+    "\n",
+    "client = ks_api.KSTradeApi(access_token = accessToken, userid = userId, consumer_key = consumerKey,ip = \"192.168.1.9\", app_id = \"DefaultApplication\", \\\n",
+    "                        host = \"https://ctradeapi.kotaksecurities.com/apim\", consumer_secret = consumerSecret)\n",
+    "\n",
+    "Login = client.login(password = password)\n",
+    "\n",
+    "AC = client.session_2fa(access_code = accessCode)\n",
+    "\n",
+    "url = \"https://ctradeapi.kotaksecurities.com/apim/scripmaster/1.1/filename\"\n",
+    "headers = {'accept':'application/json','consumerKey':f'{consumerKey}','Authorization':f'Bearer {accessToken}'}\n",
+    "res = requests.get(url,headers=headers).json()\n",
+    "\n",
+    "# order Global SEttings\n",
+    "instrument_name = \"BANKNIFTY\"\n",
+    "expiry = \"22DEC22\"\n",
+    "gap = 100\n",
+    "order_type = \"MIS\"\n",
+    "lots  = 1\n",
+    "timer = 7 # code start before these seconds for 3 OTM Strike Execution\n",
+    "depth = 3 # OTM Depth you want to trade\n",
+    "\n",
+    "# Banknifty Token Fenching \n",
+    "cashurl = res['Success']['cash']\n",
+    "cashdata = pd.read_csv(cashurl,sep=\"|\")\n",
+    "cashdata\n",
+    "Banknifty_token = int(cashdata[(cashdata.instrumentName==\"NIFTY BANK\")][\"instrumentToken\"])\n",
+    "print(f\"BANKNIFTY Token :------- {Banknifty_token}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import ks_api_client\n",
+    "from ks_api_client import ks_api\n",
+    "import pandas as pd\n",
+    "from datetime import datetime, date\n",
+    "import time\n",
+    "import calendar\n",
+    "import requests\n",
+    "import pandas as pd\n",
+    "\n",
+    "userId=\"PR6100\"\n",
+    "password=\"130919@pP\"\n",
+    "\n",
+    "accessToken=\"312ccc98-13e6-3503-b4d2-ff171bae93f9\"\n",
+    "consumerKey=\"NcSfB8goLxL5zMLjAbe3qE_rX7Ya\"\n",
+    "consumerSecret=\"kh3LwG9zNeCK0ogvbywrRQLfocka\"\n",
+    "\n",
+    "accessCode=input('Access Code : ')\n",
+    "\n",
+    "client = ks_api.KSTradeApi(access_token = accessToken, userid = userId, consumer_key = consumerKey,ip = \"192.168.1.9\", app_id = \"DefaultApplication\", \\\n",
+    "                        host = \"https://ctradeapi.kotaksecurities.com/apim\", consumer_secret = consumerSecret)\n",
+    "\n",
+    "Login = client.login(password = password)\n",
+    "\n",
+    "AC = client.session_2fa(access_code = accessCode)\n",
+    "\n",
+    "url = \"https://ctradeapi.kotaksecurities.com/apim/scripmaster/1.1/filename\"\n",
+    "headers = {'accept':'application/json','consumerKey':f'{consumerKey}','Authorization':f'Bearer {accessToken}'}\n",
+    "res = requests.get(url,headers=headers).json()\n",
+    "\n",
+    "# order Global SEttings\n",
+    "instrument_name = \"BANKNIFTY\"\n",
+    "expiry = \"22DEC22\"\n",
+    "gap = 100\n",
+    "order_type = \"MIS\"\n",
+    "lots  = 1\n",
+    "timer = 7 # code start before these seconds for 3 OTM Strike Execution\n",
+    "depth = 3 # OTM Depth you want to trade\n",
+    "\n",
+    "# Banknifty Token Fenching \n",
+    "cashurl = res['Success']['cash']\n",
+    "cashdata = pd.read_csv(cashurl,sep=\"|\")\n",
+    "cashdata\n",
+    "Banknifty_token = int(cashdata[(cashdata.instrumentName==\"NIFTY BANK\")][\"instrumentToken\"])\n",
+    "print(f\"BANKNIFTY Token :------- {Banknifty_token}\")"
+   ]
   }
  ],
  "metadata": {
@@ -433,7 +604,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12 (main, Apr  4 2022, 05:22:27) [MSC v.1916 64 bit (AMD64)]"
+   "version": "3.9.12"
   },
   "orig_nbformat": 4,
   "vscode": {
